[tool.poetry]
name = "morse"
version = "0.1.0"
description = ""
authors = ["Joe Nudell <jnudell@hks.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
english-words = "^2.0.1"
wordfreq = "^3.1.1"
wordsegment = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
